// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
.c2 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  background-color: #FFFFFF;
  color: #00C8DC;
  background-color: #333333;
  color: #FFFFFF;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c4 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Badge No.1
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Some other label
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Free shipping
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Hot Hot Hot
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Last one
      </div>
    </span>
  </div>
</div>
`;

exports[`Badge should render a badge line 1`] = `
.c2 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  background-color: #FFFFFF;
  color: #00C8DC;
  background-color: #333333;
  color: #FFFFFF;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c4 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Badge No.1
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Some other label
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Free shipping
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Hot Hot Hot
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Last one
      </div>
    </span>
  </div>
</div>
`;

exports[`Badge should render a badge line disabled 1`] = `
.c2 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  background-color: #FFFFFF;
  color: #000000;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c4 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Badge No.1
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Some other label
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Free shipping
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Hot Hot Hot
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Last one
      </div>
    </span>
  </div>
</div>
`;

exports[`Badge should render a badge line secondary 1`] = `
.c2 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  background-color: #FFFFFF;
  color: #00C8DC;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c4 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Badge No.1
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Some other label
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Free shipping
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Hot Hot Hot
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Last one
      </div>
    </span>
  </div>
</div>
`;

exports[`Badge should render with primary color 1`] = `
.c2 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  background-color: #00C8DC;
  color: #FFFFFF;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c4 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Badge No.1
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Some other label
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Free shipping
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Hot Hot Hot
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Last one
      </div>
    </span>
  </div>
</div>
`;

exports[`Badge should render with secondary color 1`] = `
.c2 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  background-color: #FFFFFF;
  color: #00C8DC;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c4 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Badge No.1
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Some other label
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Free shipping
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Hot Hot Hot
      </div>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="xxs"
    >
      <div
        className="c4"
      >
        Last one
      </div>
    </span>
  </div>
</div>
`;
